<resources>
    <string name="app_name">PictureOfADay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>

    <string name="header_settings">Настройки приложения</string>
    <string name="choose_theme">Выбор темы:</string>
    <string name="standart_theme_text">Стандартная</string>
    <string name="softness_theme_text">Нежность</string>
    <string name="hardness_theme_text">Металл</string>
    <string name="mars">Mars</string>
    <string name="earth">Earth</string>
    <string name="system">System</string>

</resources>